@@ -6,6 +6,7 @@ X   X
     * Add Hoe + Fire Protection = sensor
     * Add Leggings + Punch = rocket launch pants (double-tap shift)
     * Add Flint & Steel + Blast Protection = anti-creeper (cancel nearby explosion)
+    * Add Flint & Steel + Punch = cannon
     * Change Boots + Punch = hover jump, now activated by double-tapping shift
       Fixes conflict with Shift for sneaking
     * Improve Shovel + Power = excavate, now can excavate sand by default
